--- a/PetCapsuleGUI/Pages/CagePage.xaml
+++ b/PetCapsuleGUI/Pages/CagePage.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="PetCapsuleGUI.CagePage"
+    x:Class="PetCapsuleGUI.Pages.CagePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:PetCapsuleGUI"
+    xmlns:local="using:PetCapsuleGUI.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" FontFamily="Trebuchet MS" Background="#FFFCFAE1">
@@ -10,8 +10,11 @@
     <Grid Background="#FFFCFAE1">
         <TextBlock x:Name="HeaderBlock" Text="PetCapsule" FontFamily="Trebuchet MS" FontSize="70" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 20 0 0"/>
         <StackPanel x:Name="FrontStack" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Button x:Name="VideoButton" HorizontalAlignment="Center" Height="50" Width="250" Content="Video Call" Margin="0 20 0 0" FontSize="25"/>
-            <Button x:Name="InfoButton" HorizontalAlignment="Center" Height="50" Width="250" Content="Capsule Settings" Margin="0 20 0 0" FontSize="25"/>
+            <Button x:Name="VideoButton" HorizontalAlignment="Center" Height="50" Width="250" Content="Video Call" Margin="0 20 0 0" FontSize="25" Click="VideoButton_Click"/>
+            
+            <Button x:Name="TemperatureButton" HorizontalAlignment="Center" Height="50" Width="250" Content="Temperature" Margin="0 20 0 0" FontSize="25" Click="TemperatureButton_Click"/>
+            <Button x:Name="HumidityButton" HorizontalAlignment="Center" Height="50" Width="250" Content="Humidity" Margin="0 20 0 0" FontSize="25" Click="HumidityButton_Click"/>
+            <Button x:Name="StatusButton" HorizontalAlignment="Center" Height="50" Width="250" Content="Status" Margin="0 20 0 0" FontSize="25" Click="StatusButton_Click"/>
         </StackPanel>
         <Button x:Name="BackButton" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="50" Width="150" Content="Back" Margin="20 0 0 20" FontSize="25" Click="BackButton_Click"/>
     </Grid>
