--- a/PetCapsuleGUI/Pages/RegPage2.xaml
+++ b/PetCapsuleGUI/Pages/RegPage2.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="PetCapsuleGUI.RegPage2"
+    x:Class="PetCapsuleGUI.Pages.RegPage2"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:PetCapsuleGUI"
+    xmlns:local="using:PetCapsuleGUI.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" FontFamily="Trebuchet MS" Background="#FFFCFAE1">
