--- a/PetCapsuleGUI/Pages/ForgotpasswordPage.xaml
+++ b/PetCapsuleGUI/Pages/ForgotpasswordPage.xaml
@@ -8,15 +8,15 @@
     mc:Ignorable="d" FontFamily="Trebuchet MS" Background="#FFFCFAE1">
 
     <Grid Background="#FFFCFAE1">
-        <TextBlock x:Name="HeaderBlock" Text="PetCapsule" FontFamily="Trebuchet MS" FontSize="70" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 20 0 0"/>
+        <TextBlock x:Name="HeaderBlock" Text="PetCapsule" FontFamily="Trebuchet MS" FontSize="70" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 20 0 0" Foreground="#FFB9121B"/>
         <StackPanel x:Name="LoginStack" HorizontalAlignment="Center" VerticalAlignment="Center">
             <TextBox x:Name="UsernameBox" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" Height="50" FontSize="20" TextAlignment="Left" Margin="0 0 0 20" PlaceholderText="Enter username" />
             <TextBox x:Name="EmailBox" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" Height="50" FontSize="20" TextAlignment="Left" Margin="0 0 0 20" PlaceholderText="Enter email"/>
-            <Button x:Name="ResetPassword" HorizontalAlignment="Center" Height="50" Width="193" Content="Reset Password" Margin="0 0 0 80" FontSize="25"/>
+            <Button x:Name="ResetPassword" HorizontalAlignment="Center" Height="50" Width="193" Content="Reset Password" Margin="0 0 0 80" FontSize="25" Background="#FFB9121B" Foreground="#FFFCFAE1"/>
             <TextBlock x:Name="NewPasswordBlock" Text="Your new password is" FontSize="20"/>
             <TextBox x:Name="NewPassword" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" Height="50" FontSize="20" TextAlignment="Left" Margin="0 0 0 20"/>
         </StackPanel>
-        <Button x:Name="BackButton" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="50" Width="150" Content="Back" Margin="20 0 0 20" FontSize="25" Click="BackButton_Click"/>
-        <Button x:Name="FinishButton" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="50" Width="150" Content="Finish" Margin="0 0 20 20" FontSize="25" Click="FinishButton_Click"/>
+        <Button x:Name="BackButton" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="50" Width="150" Content="Back" Margin="20 0 0 20" FontSize="25" Click="BackButton_Click" Background="#FFB9121B" Foreground="#FFFCFAE1"/>
+        <Button x:Name="FinishButton" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="50" Width="150" Content="Finish" Margin="0 0 20 20" FontSize="25" Click="FinishButton_Click" Background="#FFB9121B" Foreground="#FFFCFAE1"/>
     </Grid>
 </Page>
