--- a/PetCapsuleGUI/Pages/CapsulesPage.xaml
+++ b/PetCapsuleGUI/Pages/CapsulesPage.xaml
@@ -8,17 +8,17 @@
     mc:Ignorable="d" FontFamily="Trebuchet MS" Background="#FFFCFAE1">
 
     <Grid Background="#FFFCFAE1">
-        <TextBlock x:Name="HeaderBlock" Text="PetCapsule" FontFamily="Trebuchet MS" FontSize="70" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 20 0 0"/>
+        <TextBlock x:Name="HeaderBlock" Text="PetCapsule" FontFamily="Trebuchet MS" FontSize="70" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 20 0 0" Foreground="#FFB9121B"/>
         <StackPanel x:Name="FrontStack" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock x:Name="WelcomeBlock" Text="My PetCapsules" FontFamily="Trebuchet MS" FontSize="25" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 0 0 90"/>
+            <TextBlock x:Name="WelcomeBlock" Text="My PetCapsules" FontFamily="Trebuchet MS" FontSize="25" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 0 0 90" Foreground="#FFB9121B" FontWeight="Bold"/>
             <ListView x:Name="CapsulesScroll" MaxHeight="300">
-                <Button x:Name="CapsuleButton1" HorizontalAlignment="Center" Height="50" Width="250" Content="PetCapsules #1" Margin="0 0 0 20" FontSize="25" Click="CapsuleButton1_Click"/>
-                <Button x:Name="CapsuleButton2" HorizontalAlignment="Center" Height="50" Width="250" Content="PetCapsules #2" Margin="0 0 0 20" FontSize="25"/>
-                <Button x:Name="CapsuleButton3" HorizontalAlignment="Center" Height="50" Width="250" Content="PetCapsules #3" Margin="0 0 0 20" FontSize="25"/>
-                <Button x:Name="CapsuleButton4" HorizontalAlignment="Center" Height="50" Width="250" Content="PetCapsules #4" Margin="0 0 0 20" FontSize="25"/>
-                <Button x:Name="CapsuleButton5" HorizontalAlignment="Center" Height="50" Width="250" Content="PetCapsules #" Margin="0 0 0 20" FontSize="25"/>
+                <Button x:Name="CapsuleButton1" HorizontalAlignment="Center" Height="50" Width="250" Content="PetCapsules #1" Margin="0 0 0 20" FontSize="25" Click="CapsuleButton1_Click" Background="#FFB9121B" Foreground="#FFFCFAE1"/>
+                <Button x:Name="CapsuleButton2" HorizontalAlignment="Center" Height="50" Width="250" Content="PetCapsules #2" Margin="0 0 0 20" FontSize="25" Background="#FFB9121B" Foreground="#FFFCFAE1"/>
+                <Button x:Name="CapsuleButton3" HorizontalAlignment="Center" Height="50" Width="250" Content="PetCapsules #3" Margin="0 0 0 20" FontSize="25" Background="#FFB9121B" Foreground="#FFFCFAE1"/>
+                <Button x:Name="CapsuleButton4" HorizontalAlignment="Center" Height="50" Width="250" Content="PetCapsules #4" Margin="0 0 0 20" FontSize="25" Background="#FFB9121B" Foreground="#FFFCFAE1"/>
+                <Button x:Name="CapsuleButton5" HorizontalAlignment="Center" Height="50" Width="250" Content="PetCapsules #" Margin="0 0 0 20" FontSize="25" Background="#FFB9121B" Foreground="#FFFCFAE1"/>
             </ListView>
         </StackPanel>
-        <Button x:Name="BackButton" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="50" Width="150" Content="Back" Margin="20 0 0 20" FontSize="25" Click="BackButton_Click"/>
+        <Button x:Name="BackButton" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="50" Width="150" Content="Back" Margin="20 0 0 20" FontSize="25" Click="BackButton_Click" Background="#FFB9121B" Foreground="#FFFCFAE1"/>
     </Grid>
 </Page>
