--- a/PetCapsuleGUI/Pages/MainPage.xaml
+++ b/PetCapsuleGUI/Pages/MainPage.xaml
@@ -8,15 +8,15 @@
     mc:Ignorable="d" FontFamily="Trebuchet MS" Background="#FFFCFAE1">
 
     <Grid Background="#FFFCFAE1">
-        <TextBlock x:Name="HeaderBlock" Text="PetCapsule" FontFamily="Trebuchet MS" FontSize="70" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 20 0 0"/>
+        <TextBlock x:Name="HeaderBlock" Text="PetCapsule" FontFamily="Trebuchet MS" FontSize="70" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 20 0 0" Foreground="#FFB9121B"/>
         <StackPanel x:Name="LoginStack" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock x:Name="UsernameBlock" TextWrapping="Wrap" Text="Username" FontSize="30" VerticalAlignment="Center" Height="47" Margin="0 100 0 0"/>
+            <TextBlock x:Name="UsernameBlock" TextWrapping="Wrap" Text="Username" FontSize="30" VerticalAlignment="Center" Height="47" Margin="0 100 0 0" Foreground="#FFB9121B"/>
             <TextBox x:Name="UsernameBox" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" Height="50" FontSize="20" TextAlignment="Left" Margin="0 0 0 20" PlaceholderText="Enter username" />
-            <TextBlock x:Name="PasswordBlock" TextWrapping="Wrap" Text="Password" FontSize="30" VerticalAlignment="Center" Height="47"/>
+            <TextBlock x:Name="PasswordBlock" TextWrapping="Wrap" Text="Password" FontSize="30" VerticalAlignment="Center" Height="47" Foreground="#FFB9121B"/>
             <PasswordBox x:Name="PasswordBox" VerticalAlignment="Center" Width="200" Height="50" FontSize="20" PlaceholderText="Enter password"/>
             <HyperlinkButton Content="Forgot password?" Height="50" Width="200" FontSize="25" Margin="0 0 0 0" Click="HyperlinkButton_Click_1"/>
-            <Button x:Name="LoginButton" HorizontalAlignment="Center" Height="50" Width="150" Content="Login" Margin="0 20 0 0" FontSize="25" Click="LoginButton_Click"/>
-            <Button x:Name="RegButton" HorizontalAlignment="Center" Height="50" Width="150" Content="Register" Margin="0 20 0 0" FontSize="25" Click="RegButton_Click"/>
+            <Button x:Name="LoginButton" HorizontalAlignment="Center" Height="50" Width="150" Content="Login" Margin="0 20 0 0" FontSize="25" Click="LoginButton_Click" Foreground="#FFFCFAE1" Background="#FFB9121B"/>
+            <Button x:Name="RegButton" HorizontalAlignment="Center" Height="50" Width="150" Content="Register" Margin="0 20 0 0" FontSize="25" Click="RegButton_Click" Background="#FFB9121B" Foreground="#FFFCFAE1"/>
 
         </StackPanel>
 
