--- a/PetCapsuleGUI/Pages/MyinfoPage.xaml
+++ b/PetCapsuleGUI/Pages/MyinfoPage.xaml
@@ -15,7 +15,7 @@
             <TextBox x:Name="LastnameBox" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" Height="50" FontSize="20" TextAlignment="Left" Margin="0 0 0 20" PlaceholderText="LASTNAME HERE" IsReadOnly="True" />
             <TextBox x:Name="EmailBox" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" Height="50" FontSize="20" TextAlignment="Left" Margin="0 0 0 20" PlaceholderText="EMAIL HERE" IsReadOnly="True" />
             <TextBox x:Name="AddressBox" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" Height="50" FontSize="20" TextAlignment="Left" Margin="0 0 0 20" PlaceholderText="ADDRESS HERE" IsReadOnly="True" />
-            <TextBox x:Name="LocationBox" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" Height="50" FontSize="20" TextAlignment="Left" Margin="0 0 0 20" PlaceholderText="LOCATION HERE" IsReadOnly="True" />
+            <TextBox x:Name="CityBox" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" Height="50" FontSize="20" TextAlignment="Left" Margin="0 0 0 20" PlaceholderText="LOCATION HERE" IsReadOnly="True" />
             <Button x:Name="EditButton" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="50" Width="150" Content="Edit info" Margin="0 0 0 20" FontSize="25" Click="EditButton_Click" Background="#FFB9121B" Foreground="#FFFCFAE1"/>
         </StackPanel>
         <Button x:Name="BackButton" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="50" Width="150" Content="Back" Margin="0 0 0 20" FontSize="25" Click="BackButton_Click" Background="#FFB9121B" Foreground="#FFFCFAE1"/>
