--- a/PetCapsuleGUI/Pages/ForgotpasswordPage.xaml
+++ b/PetCapsuleGUI/Pages/ForgotpasswordPage.xaml
@@ -12,7 +12,7 @@
         <StackPanel x:Name="LoginStack" HorizontalAlignment="Center" VerticalAlignment="Center">
             <TextBox x:Name="UsernameBox" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" Height="50" FontSize="20" TextAlignment="Left" Margin="0 0 0 20" PlaceholderText="Enter username" />
             <TextBox x:Name="EmailBox" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" Height="50" FontSize="20" TextAlignment="Left" Margin="0 0 0 20" PlaceholderText="Enter email"/>
-            <Button x:Name="ResetPassword" HorizontalAlignment="Center" Height="50" Width="193" Content="Reset Password" Margin="0 0 0 80" FontSize="25" Background="#FFB9121B" Foreground="#FFFCFAE1"/>
+            <Button x:Name="ResetPassword" HorizontalAlignment="Center" Height="50" Width="193" Content="Reset Password" Margin="0 0 0 80" FontSize="25" Background="#FFB9121B" Foreground="#FFFCFAE1" Click="ResetPassword_Click"/>
             <TextBlock x:Name="NewPasswordBlock" Text="Your new password is" FontSize="20"/>
             <TextBox x:Name="NewPassword" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" Height="50" FontSize="20" TextAlignment="Left" Margin="0 0 0 20"/>
         </StackPanel>
