--- a/PetCapsuleGUI/Pages/ForgotpasswordPage.xaml
+++ b/PetCapsuleGUI/Pages/ForgotpasswordPage.xaml
@@ -9,6 +9,7 @@
 
     <Grid Background="#FFFCFAE1">
         <TextBlock x:Name="HeaderBlock" Text="PetCapsule" FontFamily="Trebuchet MS" FontSize="70" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 20 0 0" Foreground="#FFB9121B"/>
+        <TextBlock x:Name="ErrorBlock" Text="" FontSize="30" HorizontalAlignment="Center" Margin="0 250 0 0" Foreground="#FFB9121B" FontWeight="Bold"/>
         <StackPanel x:Name="LoginStack" HorizontalAlignment="Center" VerticalAlignment="Center">
             <TextBox x:Name="UsernameBox" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" Height="50" FontSize="20" TextAlignment="Left" Margin="0 0 0 20" PlaceholderText="Enter username" />
             <TextBox x:Name="EmailBox" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" Height="50" FontSize="20" TextAlignment="Left" Margin="0 0 0 20" PlaceholderText="Enter email"/>
