--- a/PetCapsuleGUI/Pages/MainPage.xaml
+++ b/PetCapsuleGUI/Pages/MainPage.xaml
@@ -9,8 +9,9 @@
 
     <Grid Background="#FFFCFAE1">
         <TextBlock x:Name="HeaderBlock" Text="PetCapsule" FontFamily="Trebuchet MS" FontSize="70" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 20 0 0" Foreground="#FFB9121B"/>
+        <TextBlock x:Name="ErrorBlock" TextWrapping="NoWrap" Text="" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 200 0 0" Foreground="#FFB9121B"/>
         <StackPanel x:Name="LoginStack" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock x:Name="UsernameBlock" TextWrapping="Wrap" Text="Username" FontSize="30" VerticalAlignment="Center" Height="47" Margin="0 100 0 0" Foreground="#FFB9121B"/>
+            <TextBlock x:Name="UsernameBlock" TextWrapping="Wrap" Text="Username" FontSize="30" VerticalAlignment="Center" Height="47" Margin="0 10 0 20" Foreground="#FFB9121B"/>
             <TextBox x:Name="UsernameBox" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" Height="50" FontSize="20" TextAlignment="Left" Margin="0 0 0 20" PlaceholderText="Enter username" />
             <TextBlock x:Name="PasswordBlock" TextWrapping="Wrap" Text="Password" FontSize="30" VerticalAlignment="Center" Height="47" Foreground="#FFB9121B"/>
             <PasswordBox x:Name="PasswordBox" VerticalAlignment="Center" Width="200" Height="50" FontSize="20" PlaceholderText="Enter password"/>
