--- a/PetCapsuleGUI/Pages/StatusPage.xaml
+++ b/PetCapsuleGUI/Pages/StatusPage.xaml
@@ -10,6 +10,12 @@
     <Grid Background="#FFFCFAE1">
         <TextBlock x:Name="HeaderBlock" Text="PetCapsule" FontFamily="Trebuchet MS" FontSize="70" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 20 0 0" Foreground="#FFB9121B"/>
         <TextBlock x:Name="StatusBlock" Text="Status" FontFamily="Trebuchet MS" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="-20,106,-21,0" Foreground="#FFB9121B" FontWeight="Bold"/>
+
+        <StackPanel x:Name="FrontStack" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Button x:Name="TemperatureButton" HorizontalAlignment="Center" Height="50" Width="250" Content="Temperature" Margin="0 20 0 0" FontSize="25" Click="TemperatureButton_Click" Background="#FFB9121B" Foreground="#FFFCFAE1"/>
+            <Button x:Name="HumidityButton" HorizontalAlignment="Center" Height="50" Width="250" Content="Humidity" Margin="0 20 0 0" FontSize="25" Click="HumidityButton_Click" Background="#FFB9121B" Foreground="#FFFCFAE1"/>
+        </StackPanel>
+
         <Button x:Name="BackButton" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="50" Width="150" Content="Back" Margin="20 0 0 20" FontSize="25" Click="BackButton_Click" Background="#FFB9121B" Foreground="#FFFCFAE1" />
     </Grid>
 </Page>
