--- a/PetCapsuleGUI/Pages/VideoPage.xaml
+++ b/PetCapsuleGUI/Pages/VideoPage.xaml
@@ -10,8 +10,7 @@
     <Grid Background="#FFFCFAE1">
         <TextBlock x:Name="HeaderBlock" Text="PetCapsule" FontFamily="Trebuchet MS" FontSize="70" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 20 0 0" Foreground="#FFB9121B"/>
         <TextBlock x:Name="VideoBlock" Text="Video" FontFamily="Trebuchet MS" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="-20,106,-21,0" Foreground="#FFB9121B" FontWeight="Bold"/>
-        <WebView x:Name="webview" Source="https://www.youtube.com/embed/vdw1yVbE2FU">
-        </WebView>
+        <MediaElement x:Name="kissaVideo" AutoPlay="True" Width="480" Height="640" Margin="0, 0, 0, 20" AreTransportControlsEnabled="True"></MediaElement>
         <Button x:Name="BackButton" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="50" Width="150" Content="Back" Margin="20 0 0 20" FontSize="25" Click="BackButton_Click" Background="#FFB9121B" Foreground="#FFFCFAE1"/>
     </Grid>
 </Page>
